# com2009_simulations

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: beacon_colours.launch  beaconingA.launch  beaconingB.launch  beaconingC.launch  detection.launch  final_challenge_example.launch  maze_nav.launch  obstacle_avoidance.launch  task1.launch
models/beacon_colours_floor/: model.config  model.sdf
models/beaconing/materials/scripts/: floor.material
models/detection/: model.config  model.sdf
models/detection/materials/scripts/: floor.material
models/final_challenge_example/: model.config  model.sdf
models/final_challenge_example/materials/scripts/: floor.material
models/maze_nav_floor/: model.config  model.sdf
models/maze_nav_walls/: model.config  model.sdf
models/obstacle_avoidance/: model.sdf
models/small_arena_walls/: model.config  model.sdf
models/start_zone_floor/: model.config  model.sdf
models/start_zone_floor/materials/scripts/: floor.material
models/task1/: model.config  model.sdf
models/task1/materials/scripts/: floor.material
worlds/: beacon_colours.world  detection.world  final_challenge_example.world  maze_nav.world  task1.world
